Partial_14Dec2021/force-app/main/default/objects/Beat_Master_Account__c/Beat_Master_Account__c.object-meta.xml
<CustomObject>
    <label>Beat Master Account</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Beat Master Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Master Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>