Partial_14Dec2021/force-app/main/default/objects/Beat_Master_Account__c/fields/Beat_Master__c.field-meta.xml
<CustomField>
    <fullName>Beat_Master__c</fullName>
    <label>Beat Master</label>
    <referenceTo>Beat_Master__c</referenceTo>
    <relationshipLabel>Beat Master Account</relationshipLabel>
    <relationshipName>Beat_Master_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>